boltffi_tests/fixtures/negative_scanner/variadic_function_pointer.rs
#[export]
pub fn install(callback: fn(u32, ...)) {
    let _ = callback;
}
